<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tLStockInfoActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/babyPowder"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.freelance.android.fetchXmlData.activities.StockInfoActivity">

    <TableRow
        android:id="@+id/tROne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tVCN"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/stock_symbol" />
    </TableRow>

    <TableRow
        android:id="@+id/tRTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tVYL"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/stock_year_low" />

        <TextView
            android:id="@+id/tVYH"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/stock_year_high" />
    </TableRow>

    <TableRow
        android:id="@+id/tRThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tVDL"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/stock_day_low" />

        <TextView
            android:id="@+id/tVDH"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/stock_day_high" />
    </TableRow>

    <TableRow
        android:id="@+id/tRFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tVLTPO"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/last_trade_price_only" />

        <TextView
            android:id="@+id/tVC"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/change" />
    </TableRow>

    <TableRow
        android:id="@+id/tRFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tVDPR"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:padding="@dimen/activity_horizontal_margin"
            tools:text="@string/days_range" />

    </TableRow>

</TableLayout>